2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Add pending GET requests to pending_gets before sending off the
	message.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light-upnp.c:
	* src/network-light-upnp.h:
	* src/network-light.c:
	* src/network-light.h:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-detailstreeview.h:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-devicetreeview.h:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-eventtreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:
	* src/universal-cp.c:
	* src/universal-cp.h:

	Fix the copyright header.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Fix a device proxy ref leak.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	English corrections by Robert McQueen.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	Update the NEWS file for 0.2 release.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	Some more object ref leakage fixes.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-gui.c:

	Set the version string on the about dialogs.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Bump up the version to 0.2.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* README:
	
	Update the README.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Quit menuitem calls application_exit() instead of gtk_main_quit() on
	activation.
